歌詞を修正・歌詞表記を追加

--- a/templates/pdfmr/baystars.html
+++ b/templates/pdfmr/baystars.html
@@ -72,7 +72,7 @@
 <tr>
 	<th class="p_num">2</th>
 	<th class="p_name">ロペス</th>
-	<td>勝負がかかる　痺[しび]れる瞬間
+	<td>勝負がかかる　痺（しび）れる瞬間
 		流れを我らに　アニモ　ロペス</td>
 </tr>
 <tr>
@@ -182,16 +182,18 @@
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">代打のテーマ</th>
-	<td>※代打時は右打者汎用、もしくは左打者汎用<br>
+	<td>
 		いざ戦え「○○！」　幾多の試練を乗り越えて
-		いざ進め「○○！」　その手で舵をとれ　</td>
+		いざ進め「○○！」　その手で舵をとれ<br>
+		※代打時は右打者汎用、もしくは左打者汎用</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">捕手のテーマ</th>
-	<td>※２コーラス目から各応援歌<br>
+	<td>
 		港男は誰もみんな
-		答えが出せるさ　GO GO Let's GO!</td>
+		答えが出せるさ　GO GO Let's GO!<br>
+		※２コーラス目から各応援歌</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
@@ -221,8 +223,8 @@
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">外国人投手のテーマ</th>
-	<td>×× ×××（オイ！）　×× ×××（オイ！）
-		○○！○○！　×（オイ！）×（オイ！）　×（オイオイ！）</td>
+	<td>×× ×××「オイ！」　×× ×××「オイ！」
+		○○！○○！　×「オイ！」×「オイ！」　×「オイオイ！」</td>
 </tr>
 </table>
 
