--- a/templates/pdfmr/buffaloes.html
+++ b/templates/pdfmr/buffaloes.html
@@ -60,7 +60,7 @@
 <tr>
 	<th class="p_num">00</th>
 	<th class="p_name">西浦颯大</th>
-	<td>風斬り裂くユニフォーム MAX全開フル加速 豪脚足攻ブッチギリ 光速DASHの速男</td>
+	<td>風斬り裂くユニフォーム MAX全開フル加速 豪脚足攻ブッチギリ 光速DASHの疾男（はやおとこ）</td>
 </tr>
 <tr>
 	<th class="p_num">2</th>
@@ -74,9 +74,9 @@
 <tr>
 	<th class="p_num">3</th>
 	<th class="p_name">安達了一</th>
-	<td>【A】猛れ雄々しく行け 本能の侭に 気魄出してここで今見せろ 力振り絞れ<br>
-		【ブリッジ】我武者羅に喰らいつけ<br>
-		【B】上州男が張っ飛ばす! 了一! 了一! 張っ飛ばせー!</td>
+	<td>《A》猛（たけ）れ雄々しく行け 本能の侭に 気魄（きはく）出してここで今見せろ 力振り絞れ<br>
+		《Bridge》我武者羅に喰らいつけ<br>
+		《B》上州男が張っ飛ばす! 了一! 了一! 張っ飛ばせー!</td>
 </tr>
 <tr>
 	<th class="p_num">4</th>
@@ -89,8 +89,8 @@
 <tr>
 	<th class="p_num">5</th>
 	<th class="p_name">西野真弘</th>
-	<td>【1】動きまわる元気 誰にも負けない 明日へと続く道を拓け 前だけ見て<br>
-		【2】怯まぬ精神 失わぬ気力 頑なに 貫き通せ<br>
+	<td>《1》動きまわる元気 誰にも負けない 明日へと続く道を拓け 前だけ見て<br>
+		《2》怯まぬ精神 失わぬ気力 頑なに 貫き通せ<br>
 	</td>
 </tr>
 <tr>
@@ -107,25 +107,33 @@
 <tr>
 	<th class="p_num">9</th>
 	<th class="p_name">大城滉二</th>
-	<td>【前奏：君よ輝けとただ願う この想い いつまでも この詩に乗せて】<br>
+	<td>【ファンファーレ：君よ輝けとただ願う この想い いつまでも この詩に乗せて】<br>
+		【前奏：（リーダーの後に）ハイヤーサーサー×3】<br>
 		逞しく咲き誇る サンタンカの花の様に 強く熱く気概を以ち 行けよ 凜々しき強者</td>
 </tr>
 <tr>
 	<th class="p_num">34</th>
 	<th class="p_name">吉田正尚</th>
-	<td>(A)力を求める限り 幾多の困難乗り越え 前人未到の境地 辿り着く男の名は<br>
-		(B)オイ! オイ! オイ! オイ! オイ! それ正尚! オー オイ! それかっ飛ばせ<br>
-		【境地Ver】<br>
-		(イントロ)オー… 正尚!<br>
-		(A)オイ! オイ!… 吉田!<br>
-		(サビ)その力 ここで 魅せろ! 魅せろ!　全身全霊 懸けろ! 懸けろ!
+	<td>
+		《通常Ver》
+		［奇数回］力を求める限り 幾多の困難乗り越え 前人未到の境地 辿り着く男の名は<br>
+		［偶数回］Woi! Woi! Woi!Woi!Woi! それ 正尚! Wohhhhh...Woi! それ かっ飛ばせー!<br>
+		<br>
+		《境地Ver》<br>
+		【イントロ】<br>Wohhh...MA!SA!TA!KA! MA! SA! TA!<br>
+		【Aメロ】<br>
+		Woi! Woi! WoiWoi! Woi! Woi!
+		WoiWoiWoi! Woi! YO! SHI! DA!<br>
+		【サビ】<br>
+		その力 ここで 「魅せろ! 魅せろ!」　全身全霊 「懸けろ! 懸けろ!」<br>
+		【Intro2】<br>Wohhh...MA! SA! TA! KA!
 	</td>
 </tr>
 <tr>
 	<th class="p_num">37</th>
 	<th class="p_name">若月健矢</th>
-	<td>【A】健矢 揺るぎなき決意 底知れぬ覇気が力と成る 果てなき その念いが 笑顔の輪をつくる<br>
-		【B】捕み取れ その努力で</td>
+	<td>《A》健矢 揺るぎなき決意 底知れぬ覇気が力と成る 果てなき その念いが 笑顔の輪をつくる<br>
+		《B》捕み取れ その努力で</td>
 </tr>
 <tr>
 	<th class="p_num">38</th>
@@ -145,32 +153,34 @@
 <tr>
 	<th class="p_num">55</th>
 	<th class="p_name">T-岡田</th>
-	<td>T! HOMERUN KING T! T! T.rex 遠く 遠く 派手に飛ばせ ナニワの轟砲<br>
-		【チャンスVer】<br>
+	<td>《通常Ver》<br>
+		T! HOMERUN KING T! T! T.rex 遠く 遠く 派手に飛ばせ ナニワの轟砲<br>
+		<br>
+		《チャンスVer》<br>
 		T! HOMERUN KING T! T! T.rex ここで決める男 このチャンスをものにしろ 遠く 遠く 派手に飛ばせ ナニワの轟砲
 	</td>
 </tr>
 <tr>
-	<th class="p_num">62</th>
+	<th class="p_num">99</th>
 	<th class="p_name">杉本裕太郎
 	</th>
 	<td>混沌する戦場で 狼煙を上げる 目の覚める弾道 敵を怯ませる</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">メインテーマ</th>
+	<th class="p_name">Bsメインテーマ</th>
 	<td>ぶつけろ熱意 無限の可能性 流した汗力に変える 志天高く</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">外国人汎用</th>
+	<th class="p_name">助っ人テーマ</th>
 	<td>野望抱き海を越え この地で名を馳せろ 新たな伝説を ここに刻め</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
-	<th class="p_name">代打</th>
-	<td>【1】ウグイスコールに颯爽と 素振り二回足固め ここが腕の見せどころ 輝く時が来た<br>
-		【2】鏡の前で汗をかき 与えられたこの打席 女房子供を食わすため 必ず仕事する</td>
+	<th class="p_name">代打テーマ </th>
+	<td>《1》ウグイスコールに颯爽と 素振り二回足固め ここが腕の見せどころ 輝く時が来た<br>
+		《2》鏡の前で汗をかき 与えられたこの打席 女房子供を食わすため 必ず仕事する</td>
 </tr>
 
 </table>
