--- a/templates/pdfmr/carp.html
+++ b/templates/pdfmr/carp.html
@@ -72,14 +72,14 @@
 <tr>
 	<th class="p_num">4</th>
 	<th class="p_name">小窪哲也</th>
-	<td>(前奏)♪~こ!♪~く!♪~ぼ!♪~こ!く!ぼ!<br>
+	<td>【前奏：♪~こ!　♪~く!　♪~ぼ!　♪~こ!く!ぼ!】<br>
 		鋭く引っ張って 華麗に流し打ち 基本はセンター返し それが小窪哲也</td>
 </tr>
 <tr>
 	<th class="p_num">5</th>
 	<th class="p_name">長野久義</th>
 	<td>
-		歓声を背に受け　頂(いただき)を見つめて　紅(くれない)　一筋に　突き進め長野 　
+		歓声を背に受け　頂(いただき)を見つめて　紅(くれない)一筋に　突き進め長野 　
 	</td>
 </tr>
 <tr>
@@ -106,7 +106,7 @@
 <tr>
 	<th class="p_num">33</th>
 	<th class="p_name">菊池涼介</th>
-	<td>(ファンファーレ)始まりの鐘が鳴る~ 菊池! 広島伝説~<br>
+	<td>【ファンファーレ：始まりの鐘が鳴る~ 「菊池!」 広島伝説】<br>
 		光を追い越して メーター振りきり駆け抜けろ 止まらないぜ 韋駄天菊池</td>
 </tr>
 <tr>
@@ -117,7 +117,7 @@
 <tr>
 	<th class="p_num">40</th>
 	<th class="p_name">磯村嘉孝</th>
-	<td>(前奏)当たると痛えぞ　磯村パンチ<br>
+	<td>【前奏：当たると痛えぞ　磯村パンチ】<br>
 		解き放てよ　この瞬間　エンジン全開　さあスパーク
 		いざ満タン　フルパワーで　撃て　磯村パンチ 　</td>
 </tr>
