--- a/templates/pdfmr/contact.html
+++ b/templates/pdfmr/contact.html
@@ -68,6 +68,13 @@
 <h2>歌詞の表記について</h2>
 <p>
 	歌詞の表記に関しては、基本的に引用先の通りに表記していますが、わかりやすくするため次のように一部表記を変更している箇所がございます。<br>
+	・前奏　→【前奏：〜〜〜】<br>
+	・ファンファーレ　→　【ファンファーレ：〜〜〜】<br>
+	・選手名　→　〇〇<br>
+	・シャウト　→　「〇〇！」　または　〇〇！<br>
+	・チャンスバージョン　→　《チャンスVer》<br>
+	・１番、２番　→　《1》、《2》<br>
+	・ドラム　→　×<br>
 
 </p>
 
