--- a/templates/pdfmr/dragons.html
+++ b/templates/pdfmr/dragons.html
@@ -59,13 +59,15 @@
 <tr>
 	<th class="p_num">1</th>
 	<th class="p_name">京田陽太</th>
-	<td>【1】青き大空に 今、勝利の華を 輝くその翼で 示せよ京田<br>【2】オイ! オイ! 京田! オイ! オイ! そーれ!</td>
+	<td>
+		《1》青き大空に 今、勝利の華を 輝くその翼で 示せよ京田<br>
+		《2》オイ! オイ! 京田! オイ! オイ! そーれ!</td>
 </tr>
 <tr>
 	<th class="p_num">3</th>
 	<th class="p_name">高橋周平</th>
 	<td>
-		球は伸びゆく永遠に 頂きへ 更なる高み 行け周平<br>
+		球は伸びゆく永遠に 頂きへ「周平！」 更なる高み 行け周平「周平！」<br>
 	</td>
 </tr>
 <tr>
@@ -90,8 +92,12 @@
 <tr>
 	<th class="p_num">7</th>
 	<th class="p_name">根尾昂</th>
-	<td>【前奏：オーオオー…】<br>
-		覇道極める男 今だ魅せてやれ根尾昂 その名響かせて いざ終わりなき道をゆく<br>【パワプロVer】<br>
+	<td>
+		《通常Ver》<br>
+		【前奏：オーオオー…】<br>
+		覇道極める男 今だ魅せてやれ根尾昂 その名響かせて いざ終わりなき道をゆく<br>
+		<br>
+		《パワプロVer》<br>
 		昂! GO! GO! 昂! オイ! オイ! オイ! 今だチャンスだ打て!</td>
 </tr>
 <tr>
@@ -133,7 +139,11 @@
 <tr>
 	<th class="p_num">66</th>
 	<th class="p_name">ビシエド</th>
-	<td>【通常Ver】<br>期待を背に受けて 飛ばせ遠く 今放つアーチ 世界を翔けろ<br>【チャンスVer】<br>ビシエド! ホームラン! 勝負強さ煌めき エルタンケ打て</td>
+	<td>《通常Ver》<br>
+		期待を背に受けて 飛ばせ遠く 今放つアーチ 世界を翔けろ<br>
+		<br>
+		《チャンスVer》<br>
+		ビシエド! ホームラン! 勝負強さ煌めき エルタンケ打て</td>
 </tr>
 <tr>
 	<th class="p_num">68</th>
@@ -148,12 +158,12 @@
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">外国人汎用</th>
-	<td>海を越えて 夢をかなえる 勝利掴め 我らと共に ラーラララーラ ラララララーラ Let’s go together Get the Victory</td>
+	<td>海を越えて 夢を叶える 勝利掴め 我らと共に ラーラララーラ ラララララーラ Let’s go together Get the Victory</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">投手汎用</th>
-	<td>魂ボールにこめて 立ち向かえ全力で 今こそ我らを勝利へ 導け○○</td>
+	<td>魂ボールに込めて 立ち向かえ全力で 今こそ我らを勝利へ 導け○○</td>
 </tr>
 </table>
 
