--- a/templates/pdfmr/eagles.html
+++ b/templates/pdfmr/eagles.html
@@ -67,7 +67,7 @@
 	<th class="p_name">桑原将志</th>
 	<td>
 		オオーオオー レッツゴーオコエ<br>
-		オオーオオオオ レッツゴーオコエ(ルイルイ!)<br>
+		オオーオオオオ レッツゴーオコエ「ルイルイ!」<br>
 		オオーオオー レッツゴーオコエ<br>
 		打てオコエ瑠偉<br>
 	</td>
@@ -93,7 +93,7 @@
 <tr>
 	<th class="p_num">25</th>
 	<th class="p_name">田中和基</th>
-	<td>GO! GO! 和基 GO! GO! 和基 和基 田中和基 GO! GO! 和基</td>
+	<td>GO! GO! カズキ GO! GO! カズキ カズキ 田中カズキ GO! GO! カズキ</td>
 </tr>
 <tr>
 	<th class="p_num">26</th>
@@ -103,7 +103,7 @@
 <tr>
 	<th class="p_num">27</th>
 	<th class="p_name">大和</th>
-	<td>チャンスを掴め目指せ勝利 岡島豪郎 俊足・巧打・守り抜け 魂込めて<br>
+	<td>チャンスを掴め目指せ勝利 岡島豪郎 俊足巧打守り抜け 魂込めて<br>
 		オオオオオ オオオオオ オオオオオオオ オイ!</td>
 </tr>
 <tr>
@@ -129,16 +129,18 @@
 <tr>
 	<th class="p_num">69</th>
 	<th class="p_name">ブラッシュ</th>
-	<td>みんなが待ってるホームラン(JB!)<br>
-		みんなが待ってるホームラン(JB!)<br>
-		弾丸ライナー飛んでゆけ(JB!)<br>
-		はるか遠く</td>
+	<td>みんなが待ってるホームラン「JB!」<br>
+		みんなが待ってるホームラン「JB!」<br>
+		弾丸ライナー飛んでゆけ「JB!」<br>
+		はるか遠く<br>
+		「ゴーゴーレッツゴー JB」×4
+	</td>
 </tr>
 
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">汎用テーマ</th>
-	<td>ここで一発 かっ飛ばせ! 打てよ○○
+	<td>ここで一発 「かっ飛ばせ!」 打てよ○○
 	</td>
 </tr>
 <tr>
@@ -149,15 +151,15 @@
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">共通テーマ</th>
-	<td>レッツゴー! レッツゴー! レッツゴー○○</td>
+	<td>（音楽）レッツゴー! （音楽）レッツゴー! （音楽）レッツゴー○○</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">外国人汎用</th>
-	<td>【英語Ver】<br>
+	<td>《英語Ver》<br>
 		レッツゴー レッツゴー ホームラン ○○ オオオオオオオ<br>
 		レッツゴー レッツゴー ホームラン ○○ オオオオオオオ<br>
-		【スペイン語Ver】<br>
+		《スペイン語Ver》<br>
 		バモス バモス アニモ ○○ オオオオオオオ<br>
 		バモス バモス アニモ ○○ オオオオオオオ
 	</td>
