--- a/templates/pdfmr/fighters.html
+++ b/templates/pdfmr/fighters.html
@@ -59,15 +59,20 @@
 <tr>
 	<th class="p_num">2</th>
 	<th class="p_name">杉谷拳士</th>
-	<td>授かりしその力で　描いた景色は
-		横浜で輝く　おのれの勇姿</td>
+	<td>グラウンドに
+		輝く一番星を
+		その拳をあげて
+		掴め 杉谷拳士</td>
 </tr>
 <tr>
 	<th class="p_num">3</th>
 	<th class="p_name">王柏融</th>
 	<td>
-		【前奏：最強王! 金牌王! オイ! オイ! 柏融大王! オイ! オイ! 最強王! 金牌王! 最強金牌 柏融大王!】<br>
-		磨き上げてきた 力と技術で 強敵を打ち崩す 全壘打 柏融<br>
+		【前奏：ズイチャンワン！ ジンパイワン！ ボーロンダーワン！
+		ズイチャンワン！ ジンパイワン！
+		ズイチャンジンパイ ボーロンダーワン！】<br>
+		磨き上げてきた 力と技術で 強敵を打ち崩す 全壘打(チェンレイダー) 柏融(ボーロン)<br>
+		「最強金牌(ズイチャンジンパイ)王柏融(ワンボーロン)！」
 	</td>
 </tr>
 <tr>
@@ -79,7 +84,7 @@
 	<th class="p_num">5</th>
 	<th class="p_name">大田泰示</th>
 	<td>
-		滾る想い胸に 全てぶつけろ 魅せろこの場所で 夢の続きを
+		滾（たぎ）る想い胸に 全てぶつけろ 魅せろこの場所で 夢の続きを
 	</td>
 </tr>
 <tr>
@@ -116,7 +121,7 @@
 <tr>
 	<th class="p_num">21</th>
 	<th class="p_name">清宮幸太郎</th>
-	<td>描き出す 理想は久遠高く 鍛えし腕で 清宮打て</td>
+	<td>描き出す 理想（おもい）は久遠（はるか）高く 鍛えし腕で 清宮打て</td>
 </tr>
 <tr>
 	<th class="p_num">22</th>
