--- a/templates/pdfmr/giants.html
+++ b/templates/pdfmr/giants.html
@@ -59,7 +59,7 @@
 <tr>
 	<th class="p_num">2</th>
 	<th class="p_name">陽岱鋼</th>
-	<td>遠く強く飛ばせ 振り抜け 走り出せ 飛び込め つかみ取れ 魅せる男 陽岱鋼</td>
+	<td>遠く強く飛ばせ 振り抜け 走り出せ「オイ！」 飛び込め つかみ取れ 魅せる男 陽岱鋼</td>
 </tr>
 <tr>
 	<th class="p_num">5</th>
@@ -71,7 +71,7 @@
 <tr>
 	<th class="p_num">6</th>
 	<th class="p_name">坂本勇人</th>
-	<td>【前奏：オオオ… オー燃えろ】<br>
+	<td>【前奏：オオオ… オー燃えろ「坂本！」】<br>
 		誰よりも強く勇ましく オオオ… お前が立つその場所は熱気の渦が巻く 坂本 炎となれ</td>
 </tr>
 <tr>
@@ -125,7 +125,7 @@
 <tr>
 	<th class="p_num">25</th>
 	<th class="p_name">岡本和真</th>
-	<td>【前奏：歴史を築け 岡本和真】<br>
+	<td>【前奏：歴史を築け 岡本和真「オ・カ・モト！」】<br>
 		夢あふれるフィールド その名刻め岡本 スタンド湧かす 永遠のアーチ</td>
 </tr>
 <tr>
@@ -168,7 +168,7 @@
 <tr>
 	<th class="p_num">37</th>
 	<th class="p_name">若林晃弘</th>
-	<td>夢は大きく高らかに 輝け晃弘! まだ見ぬ境地目指して 全力で突っ走れ</td>
+	<td>夢は大きく高らかに 輝け「晃弘!」 まだ見ぬ境地目指して 全力で突っ走れ</td>
 </tr>
 <tr>
 	<th class="p_num">39</th>
@@ -213,12 +213,12 @@
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">ヒッターズテーマB</th>
-	<td>※海越え 僕らのためにやってきた Let's Fight○○! Let's Charge○○! ホームラン</td>
+	<td>海越え 僕らのためにやってきた Let's Fight○○! Let's Charge○○! ホームラン</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">ピッチャーズテーマ1</th>
-	<td>まぶしく輝け○○ この時に 勝負さ今こそ つかめよ 勝利の星</td>
+	<td>まぶしく輝け「○○！」 この時に 勝負さ今こそ つかめよ 勝利の星</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
