--- a/templates/pdfmr/link.html
+++ b/templates/pdfmr/link.html
@@ -99,8 +99,8 @@
 	<td>福岡ソフトバンクホークスの公式サイトです。</td>
 </tr>
 <tr>
-	<th><a href="https://sp.softbankhawks.co.jp/team/song/index.html">福岡ソフトバンクホークス</a></th>
-	<td>福岡ソフトバンクホークスの公式サイトです。</td>
+	<th><a href="https://www.rakuteneagles.jp/team/rooters_song.html">福岡ソフトバンクホークス</a></th>
+	<td>東北楽天ゴールデンイーグルスの公式サイトです。</td>
 </tr>
 <tr>
 	<th><a href="http://wakajishi-seibulions.com">若獅子会</a></th>
