--- a/templates/pdfmr/lions.html
+++ b/templates/pdfmr/lions.html
@@ -71,14 +71,16 @@
 <tr>
 	<th class="p_num">3</th>
 	<th class="p_name">山川穂高</th>
-	<td>山川穂高ここで一発 高らかにアーチ描こうぜ 皆の願いバットにのせて 飛ばせ遥か彼方まで
+	<td>山川穂高ここで一発 高らかにアーチ描こうぜ 皆の願いバットにのせて 飛ばせ遥か彼方まで<br>
+		やまかわ　やまかわ　やまかわ　ほたか×2
 	</td>
 </tr>
 <tr>
 	<th class="p_num">5</th>
 	<th class="p_name">外崎修汰</th>
 	<td>
-		駆け上がれ 夢の舞台へ 無我夢中に 走れ早く みてみたいな 夢中になれる君 いくぞ前進 その先へと
+		駆け上がれ 夢の舞台へ 無我夢中に 走れ早く みてみたいな 夢中になれる君 いくぞ前進 その先へと<br>
+		ラーラーラ　ラーラーラ　外崎 修汰　×3
 	</td>
 </tr>
 <tr>
@@ -91,7 +93,7 @@
 <tr>
 	<th class="p_num">7</th>
 	<th class="p_name">金子侑司</th>
-	<td>ラーラララー ラーラララーラー ラーラララー ラーララー<br>
+	<td>ラーラララー ラーラララーラー ラーラララー ラーララー「金子！」<br>
 		走れ金子 さあ一歩踏み出して その瞬間を掴め</td>
 </tr>
 <tr>
@@ -112,7 +114,7 @@
 <tr>
 	<th class="p_num">58</th>
 	<th class="p_name">熊代聖人</th>
-	<td>速球貫け 打て進め ギアを上げて 加速しろ 魅せろ熊代</td>
+	<td>速球貫け「くま！」 打て進め「くま！」 ギアを上げて「くま！」 加速しろ「くま！」 魅せろ熊代「くましろ！」</td>
 </tr>
 <tr>
 	<th class="p_num">60</th>
