--- a/templates/pdfmr/marines.html
+++ b/templates/pdfmr/marines.html
@@ -60,14 +60,14 @@
 	<th class="p_num">0</th>
 	<th class="p_name">荻野貴司</th>
 	<td>ラララ… 駆け抜けろホームまで 荻野貴司<br>
-		オイ! オイ! オイ! オイ! オイ! オイ! 打て荻野貴司!<br>
+		オイ! オイ! オイ! オイ! オイ! オイ! 打て荻野「タカシ!」<br>
 		ラララ… 駆け抜けろホームまで 荻野貴司</td>
 </tr>
 <tr>
 	<th class="p_num">1</th>
 	<th class="p_name">清田育宏</th>
 	<td>
-		Go! 清田清田 全力で飛ばせ Go! 清田清田 全力で走れ ラララ… 今こそ清田育宏 大空高く<br>
+		GO 清田清田 全力で飛ばせ GO 清田清田 全力で走れ ラララ… 今こそ清田育宏 大空高く<br>
 	</td>
 </tr>
 <tr>
@@ -92,36 +92,37 @@
 <tr>
 	<th class="p_num">10</th>
 	<th class="p_name">加藤翔平</th>
-	<td>駆け抜けろ強く勝利を目指して 光を放つ 君の勇姿 加藤翔平 加藤翔平 飛びたて翔平 彼方まで</td>
+	<td>駆け抜けろ 強く勝利を目指して 光を放つ 君の勇姿 加藤翔平 加藤翔平 飛びたて翔平 彼方まで</td>
 </tr>
 <tr>
 	<th class="p_num">13</th>
 	<th class="p_name">平沢大河</th>
 	<td>ラララ… 平沢大河 今日も俺達に勝利運べよ<br>
 		ラララ… 平沢大河 今日も俺達に勝利運べよ<br>
-		オイ! オイ! オイ! オイ! オイ! 飛ばせ平沢大河!<br>
+		オイ! オイ! オイ! オイ! オイ! 飛ばせ平沢「タイガ！」<br>
 		</td>
 </tr>
 <tr>
 	<th class="p_num">22</th>
 	<th class="p_name">田村龍弘</th>
-	<td>[1]ラララ… さぁ魅せろ男田村 ラララ…さぁ燃えろ男田村<br>
-		[2](歌詞無し)</td>
+	<td>《1》ラララ… さぁ魅せろ男田村 ラララ…さぁ燃えろ男田村<br>
+		《2》(歌詞無し)</td>
 </tr>
+
 <tr>
-	<th class="p_num">25</th>
-	<th class="p_name">三木亮</th>
-	<td>オイ! 三木亮 未来へ続く扉 今開けろ</td>
+	<th class="p_num">24</th>
+	<th class="p_name">吉田裕太</th>
+	<td>ララララ吉田 ララララ吉田 ホームを守るんだ ララララ吉田 ララララ吉田 さあここで打て</td>
 </tr>
 <tr>
 	<th class="p_num">25</th>
 	<th class="p_name">岡大海</th>
-	<td>オイ! 岡大海! 勝利を掴め</td>
+	<td>（演奏）オイ! （演奏）岡大海! （演奏）勝利を掴め</td>
 </tr>
 <tr>
-	<th class="p_num">39</th>
-	<th class="p_name">吉田裕太</th>
-	<td>ララララ吉田 ララララ吉田 ホームを守るんだ ララララ吉田 ララララ吉田 さあここで打て</td>
+	<th class="p_num">37</th>
+	<th class="p_name">三木亮</th>
+	<td>（演奏）オイ! （演奏）三木亮 未来へ続く扉 今開けろ</td>
 </tr>
 <tr>
 	<th class="p_num">44</th>
