--- a/templates/pdfmr/swallows.html
+++ b/templates/pdfmr/swallows.html
@@ -71,15 +71,17 @@
 <tr>
 	<th class="p_num">1</th>
 	<th class="p_name">山田哲人</th>
-	<td>(前奏：「山田哲人！」「山田哲人！」　夢へと続く道　「山田！」)<br>
+	<td>【前奏：「山田哲人！」「山田哲人！」　夢へと続く道　「山田！」】<br>
 		スタンド越えて打球は　遥かな夢へと続く　行け山田　新たな時代を</td>
 </tr>
 <tr>
 	<th class="p_num">2</th>
 	<th class="p_name">エスコバー</th>
 	<td>
-		(ファンファーレ：ここまで飛ばせ (※) 　エスキー　ホームラン　ホームラン　エスキー　「エスキー！」)<br>
+		【ファンファーレ：
+		ここまで飛ばせ (※) 　エスキー　ホームラン　ホームラン　エスキー　「エスキー！」】<br>
 		新たな風吹かし　栄光掴むんだ　みなぎる熱い闘志　さあ共に闘おう<br>
+		<br>
 		※ 外野にスワローズ応援席がない球場(マツダスタジアム等)<br>
 		ここまで飛ばせ → レフトへぶち込め
 	</td>
@@ -93,8 +95,9 @@
 <tr>
 	<th class="p_num">5</th>
 	<th class="p_name">川端慎吾</th>
-	<td>バットに夢をのせ　放つその打球で　ツバメを勝利へ　導け慎吾<br>
-		【チャンス川端】<br>
+	<td>《通常Ver》<br>
+		バットに夢をのせ　放つその打球で　ツバメを勝利へ　導け慎吾<br>
+		《チャンス川端》<br>
 		(メロディー)　オーオオオー　(メロディー)　「慎吾！」<br>
 		(メロディー) 「慎吾！」　(メロディー) 「慎吾！」　(メロディー)<br>
 		(間奏：メロディーに合わせて「オイ！」の合いの手を入れる)
@@ -118,7 +121,7 @@
 <tr>
 	<th class="p_num">23</th>
 	<th class="p_name">青木宣親</th>
-	<td>（ファンファーレ：ここで勝利を呼べ　行くぞ青木宣親　「青木！」)<br>
+	<td>【ファンファーレ：ここで勝利を呼べ　行くぞ青木宣親　「青木！」】<br>
 		皆と共に　描いた未来を掴むため　愛すチームで　更なる伝説築け</td>
 </tr>
 <tr>
@@ -159,7 +162,7 @@
 <tr>
 	<th class="p_num">55</th>
 	<th class="p_name">村上宗隆</th>
-	<td>(前奏：闘志あふれる一打　今こそ放てよ「村上！村上！村上！村上！」)<br>
+	<td>【前奏：闘志あふれる一打　今こそ放てよ「村上！村上！村上！村上！」】<br>
 		選ばれし猛者集う地で　強く咲く大輪　肥後より携えし力　今こそ解き放て
 		</td>
 </tr>
@@ -172,13 +175,13 @@
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">右打者汎用テーマ</th>
-	<td>オイ！　オイ！　「○○(選手名)」　オイ！　オイ！　そーれ
+	<td>オイ！　オイ！　「○○」　オイ！　オイ！　そーれ
 	</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">左打者汎用テーマ</th>
-	<td>頼むぞ○○(選手名)　ここでホームラン　今だ一発ぶちかませ</td>
+	<td>頼むぞ○○　ここでホームラン　今だ一発ぶちかませ</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
