--- a/templates/pdfmr/tigers.html
+++ b/templates/pdfmr/tigers.html
@@ -125,8 +125,8 @@
 <tr>
 	<th class="p_num">33</th>
 	<th class="p_name">糸原健斗</th>
-	<td>【A】誰にも劣らぬ ハートの強い男 我武者羅に走り抜け 果敢な戦士<br>
-		【B】凛々しく 泥臭く 斬り込め全力で 気力込めて 今ここで 燃えさかれ</td>
+	<td>《A》誰にも劣らぬ ハートの強い男 我武者羅に走り抜け 果敢な戦士<br>
+		《B》凛々しく 泥臭く 斬り込め全力で 気力込めて 今ここで 燃えさかれ</td>
 </tr>
 <tr>
 	<th class="p_num">41</th>
@@ -156,7 +156,7 @@
 <tr>
 	<th class="p_num">60</th>
 	<th class="p_name">中谷将大</th>
-	<td>【前奏：ラーラララー…】<br>
+	<td>【ファンファーレ：ラーラララー…】<br>
 		天高く 打ち込め中谷 いざ大空に アーチ描け</td>
 </tr>
 <tr>
@@ -172,7 +172,7 @@
 <tr>
 	<th class="p_num"></th>
 	<th class="p_name">外国人選手二番</th>
-	<td>強く高くボール飛ばせ レッツゴー○○○ さあ行くぞ勝利へ 進め進め進め</td>
+	<td>強く高くボール飛ばせ レッツゴー○○ さあ行くぞ勝利へ 進め進め進め</td>
 </tr>
 <tr>
 	<th class="p_num"></th>
