リンク修正

--- a/templates/pdfmr/link.html
+++ b/templates/pdfmr/link.html
@@ -99,7 +99,7 @@
 	<td>福岡ソフトバンクホークスの公式サイトです。</td>
 </tr>
 <tr>
-	<th><a href="https://www.rakuteneagles.jp/team/rooters_song.html">福岡ソフトバンクホークス</a></th>
+	<th><a href="https://www.rakuteneagles.jp/team/rooters_song.html">東北楽天ゴールデンイーグルス</a></th>
 	<td>東北楽天ゴールデンイーグルスの公式サイトです。</td>
 </tr>
 <tr>
